--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+main{
+  margin: auto;
+  width: 100vw;
+}
+
+header, section {
+  width: 1334px;
+  margin: 0 auto;
+}
